--- a/app/templates/external_data/analyst_coverage.html
+++ b/app/templates/external_data/analyst_coverage.html
@@ -388,7 +388,7 @@
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-hover" id="analyst-table">
                             <thead>
                                 <tr>
                                     <th>Aksje</th>
