--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -671,7 +671,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ url_for('main.profile') }}"><i class="fas fa-user-cog"></i> Profil</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.my_subscription') }}">Mitt Abonnement</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('notifications.settings') }}"><i class="fas fa-bell"></i> Varsler</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('price_alerts.index') }}"><i class="fas fa-bell"></i> Varsler</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.privacy') }}"><i class="fas fa-shield-alt"></i> Personvern</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.help') }}"><i class="fas fa-question-circle"></i> Hjelp</a></li>
